--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=Denis751
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+jwt.expiration=5000000
+jwt.secret=secretgfhjghjhghjgjgfccjgvcgfxhdxxhfxszzgxvjhvhv
