--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,10 @@
                     <sourceDirectories>src</sourceDirectories>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
