--- a/src/main/resources/db/changelog/changes/07-create-book-category-table.yaml
+++ b/src/main/resources/db/changelog/changes/07-create-book-category-table.yaml
@@ -4,15 +4,19 @@ databaseChangeLog:
       author: root
       changes:
         - createTable:
-            tableName: books_categories
+            tableName: book_category
             columns:
               - column:
                   constraints:
                     nullable: false
+                    foreignKeyName: fk_book_category_book_id
+                    references: books(id)
                   name: book_id
                   type: BIGINT
               - column:
                   constraints:
                     nullable: false
+                    foreignKeyName: fk_book_category_category_id
+                    references: categories(id)
                   name: category_id
                   type: BIGINT
