--- a/src/main/resources/db/changelog/changes/07-create-book-category-table.yaml
+++ b/src/main/resources/db/changelog/changes/07-create-book-category-table.yaml
@@ -4,7 +4,7 @@ databaseChangeLog:
       author: root
       changes:
         - createTable:
-            tableName: book_category
+            tableName: book_categories
             columns:
               - column:
                   constraints:
