--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bookstore?serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=Denis751
+spring.config.import=optional:file:.env[.properties]
+
+spring.datasource.url=\
+  jdbc:mysql://localhost:${MYSQLDB_DOCKER_PORT}/${MYSQLDB_DATABASE}?createDatabaseIfNotExist=true
+
+spring.datasource.username=${MYSQLDB_USER}
+spring.datasource.password=${MYSQLDB_ROOT_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
-jwt.expiration=5000000
-jwt.secret=secretgfhjghjhghjgjgfccjgvcgfxhdxxhfxszzgxvjhvhv
+jwt.expiration=${JWT_EXPIRATION}
+jwt.secret=${JWT_SECRET}
+
